Physics fixes & improvements cpConvexHull on polygon create new class PhysicsNode you can crate physics world no only with scene

--- a/cocos/2d/libcocos2d_wp8.vcxproj
+++ b/cocos/2d/libcocos2d_wp8.vcxproj
@@ -732,6 +732,7 @@
     <ClInclude Include="CCParticleExamples.h" />
     <ClInclude Include="CCParticleSystem.h" />
     <ClInclude Include="CCParticleSystemQuad.h" />
+    <ClInclude Include="CCPhysicsNode.h" />
     <ClInclude Include="CCProgressTimer.h" />
     <ClInclude Include="CCProtectedNode.h" />
     <ClInclude Include="CCRenderTexture.h" />
@@ -1354,6 +1355,7 @@
     <ClCompile Include="CCParticleSystem.cpp" />
     <ClCompile Include="CCParticleSystemQuad.cpp" />
     <ClCompile Include="CCProgressTimer.cpp" />
+    <ClCompile Include="CCPhysicsNode.cpp" />
     <ClCompile Include="CCProtectedNode.cpp" />
     <ClCompile Include="CCRenderTexture.cpp" />
     <ClCompile Include="CCScene.cpp" />
