--- a/cocos/2d/libcocos2d.vcxproj.filters
+++ b/cocos/2d/libcocos2d.vcxproj.filters
@@ -448,6 +448,9 @@
     <ClCompile Include="CCParticleSystemQuad.cpp">
       <Filter>2d</Filter>
     </ClCompile>
+    <ClCompile Include="CCPhysicsNode.cpp">
+      <Filter>2d</Filter>
+    </ClCompile>
     <ClCompile Include="CCProgressTimer.cpp">
       <Filter>2d</Filter>
     </ClCompile>
@@ -1979,6 +1982,9 @@
       <Filter>2d</Filter>
     </ClInclude>
     <ClInclude Include="CCParticleSystemQuad.h">
+      <Filter>2d</Filter>
+    </ClInclude>
+    <ClInclude Include="CCPhysicsNode.h">
       <Filter>2d</Filter>
     </ClInclude>
     <ClInclude Include="CCProgressTimer.h">
