--- a/quick/player/proj.win32/player.vcxproj.filters
+++ b/quick/player/proj.win32/player.vcxproj.filters
@@ -728,6 +728,9 @@
     <ClCompile Include="..\Classes\runtime\FileServer.cpp">
       <Filter>Classes\runtime</Filter>
     </ClCompile>
+    <ClCompile Include="PlayerDumperWin.cpp">
+      <Filter>win32</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="player3.ico">
