CMake build project for MacOSX, iOS-Simulator, Win32 and Linux-64bit.

--- a/cocos/editor-support/spine/CMakeLists.txt
+++ b/cocos/editor-support/spine/CMakeLists.txt
@@ -1,36 +1,60 @@
 
-set(COCOS_SPINE_SRC
+project(SPINE)
 
-  editor-support/spine/Animation.c
-  editor-support/spine/AnimationState.c
-  editor-support/spine/AnimationStateData.c
-  editor-support/spine/Atlas.c
-  editor-support/spine/AtlasAttachmentLoader.c
-  editor-support/spine/Attachment.c
-  editor-support/spine/AttachmentLoader.c
-  editor-support/spine/Bone.c
-  editor-support/spine/BoneData.c
-  editor-support/spine/BoundingBoxAttachment.c
-  editor-support/spine/Event.c
-  editor-support/spine/EventData.c
-  editor-support/spine/extension.c
-  editor-support/spine/IkConstraint.c
-  editor-support/spine/IkConstraintData.c
-  editor-support/spine/Json.c
-  editor-support/spine/MeshAttachment.c
-  editor-support/spine/PolygonBatch.cpp
-  editor-support/spine/RegionAttachment.c
-  editor-support/spine/Skeleton.c
-  editor-support/spine/SkeletonAnimation.cpp
-  editor-support/spine/SkeletonBounds.c
-  editor-support/spine/SkeletonData.c
-  editor-support/spine/SkeletonJson.c
-  editor-support/spine/SkeletonRenderer.cpp
-  editor-support/spine/Skin.c
-  editor-support/spine/SkinnedMeshAttachment.c
-  editor-support/spine/Slot.c
-  editor-support/spine/SlotData.c
-  editor-support/spine/spine-cocos2dx.cpp
+#===============================================================================
+# Define Spine target.
+set(SPINE_TARGET "spine" CACHE INTERNAL "")
+add_library(${SPINE_TARGET} STATIC ${CMAKE_CURRENT_LIST_FILE})
+cocos_tweak_target_output_directory(${SPINE_TARGET})
+
+set_target_properties(${SPINE_TARGET} PROPERTIES
+    FOLDER "external"
+    )
+
+#===============================================================================
+# Add include directories.
+target_include_directories(${SPINE_TARGET} PRIVATE "..")
+
+#===============================================================================
+# Add sources.
+set(spine_src
+    ${CMAKE_CURRENT_LIST_FILE}
+    Animation.c
+    AnimationState.c
+    AnimationStateData.c
+    Atlas.c
+    AtlasAttachmentLoader.c
+    Attachment.c
+    AttachmentLoader.c
+    Bone.c
+    BoneData.c
+    BoundingBoxAttachment.c
+    Event.c
+    EventData.c
+    extension.c
+    IkConstraint.c
+    IkConstraintData.c
+    Json.c
+    MeshAttachment.c
+    PolygonBatch.cpp
+    RegionAttachment.c
+    Skeleton.c
+    SkeletonAnimation.cpp
+    SkeletonBounds.c
+    SkeletonData.c
+    SkeletonJson.c
+    SkeletonRenderer.cpp
+    Skin.c
+    SkinnedMeshAttachment.c
+    Slot.c
+    SlotData.c
+    spine-cocos2dx.cpp
 )
+file(GLOB spine_header ${CMAKE_CURRENT_LIST_DIR} "*.h")
 
-include_directories( editor-support )
+target_sources(${SPINE_TARGET} PRIVATE ${spine_src} ${spine_header})
+
+#===============================================================================
+# Link dependent libraries.
+target_link_libraries(${SPINE_TARGET} ${COCOS2D_TARGET})
+
