--- a/tests/lua-empty-test/project/CMakeLists.txt
+++ b/tests/lua-empty-test/project/CMakeLists.txt
@@ -24,8 +24,8 @@ endif()
 include_directories(
   Classes
   ../../../cocos/scripting/lua-bindings/manual
+  ../../../cocos/scripting/lua-bindings/manual/tolua
   ../../../external/lua/lua
-  ../../../external/lua/tolua
 )
 
 # add the executable
