--- a/cocos/scripting/lua-bindings/proj.win32/libluacocos2d.vcxproj.filters
+++ b/cocos/scripting/lua-bindings/proj.win32/libluacocos2d.vcxproj.filters
@@ -10,9 +10,6 @@
     <Filter Include="script">
       <UniqueIdentifier>{af4b7d5f-f563-4069-ade8-c1a954e6fe5e}</UniqueIdentifier>
     </Filter>
-    <Filter Include="tolua">
-      <UniqueIdentifier>{24fae6d6-ebb5-4da1-b0da-3f3845a9e9a9}</UniqueIdentifier>
-    </Filter>
     <Filter Include="luajit">
       <UniqueIdentifier>{cc863463-a948-487a-aacd-dc233c3e5200}</UniqueIdentifier>
     </Filter>
@@ -76,25 +73,13 @@
     <Filter Include="manual\audioengine">
       <UniqueIdentifier>{08e7d51a-6f8a-4e54-8abe-a86101be8dad}</UniqueIdentifier>
     </Filter>
+    <Filter Include="manual\tolua">
+      <UniqueIdentifier>{4235befd-23f9-4714-b332-0b457ce0902a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\auto\lua_cocos2dx_auto.cpp">
       <Filter>auto</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\..\external\lua\tolua\tolua_event.c">
-      <Filter>tolua</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\..\external\lua\tolua\tolua_is.c">
-      <Filter>tolua</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\..\external\lua\tolua\tolua_map.c">
-      <Filter>tolua</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\..\external\lua\tolua\tolua_push.c">
-      <Filter>tolua</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\..\external\lua\tolua\tolua_to.c">
-      <Filter>tolua</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\..\external\xxtea\xxtea.cpp">
       <Filter>xxtea</Filter>
@@ -118,9 +103,6 @@
       <Filter>manual</Filter>
     </ClCompile>
     <ClCompile Include="..\manual\LuaBasicConversions.cpp">
-      <Filter>manual</Filter>
-    </ClCompile>
-    <ClCompile Include="..\manual\tolua_fix.cpp">
       <Filter>manual</Filter>
     </ClCompile>
     <ClCompile Include="..\manual\cocos2d\lua_cocos2dx_deprecated.cpp">
@@ -285,16 +267,28 @@
     <ClCompile Include="..\manual\cocostudio\lua-cocos-studio-conversions.cpp">
       <Filter>manual\cocostudio</Filter>
     </ClCompile>
+    <ClCompile Include="..\manual\tolua\tolua_event.c">
+      <Filter>manual\tolua</Filter>
+    </ClCompile>
+    <ClCompile Include="..\manual\tolua\tolua_fix.cpp">
+      <Filter>manual\tolua</Filter>
+    </ClCompile>
+    <ClCompile Include="..\manual\tolua\tolua_is.c">
+      <Filter>manual\tolua</Filter>
+    </ClCompile>
+    <ClCompile Include="..\manual\tolua\tolua_map.c">
+      <Filter>manual\tolua</Filter>
+    </ClCompile>
+    <ClCompile Include="..\manual\tolua\tolua_push.c">
+      <Filter>manual\tolua</Filter>
+    </ClCompile>
+    <ClCompile Include="..\manual\tolua\tolua_to.c">
+      <Filter>manual\tolua</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\auto\lua_cocos2dx_auto.hpp">
       <Filter>auto</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\..\external\lua\tolua\tolua++.h">
-      <Filter>tolua</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\..\external\lua\tolua\tolua_event.h">
-      <Filter>tolua</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\external\lua\luajit\include\lauxlib.h">
       <Filter>luajit</Filter>
@@ -330,9 +324,6 @@
       <Filter>manual</Filter>
     </ClInclude>
     <ClInclude Include="..\manual\LuaBasicConversions.h">
-      <Filter>manual</Filter>
-    </ClInclude>
-    <ClInclude Include="..\manual\tolua_fix.h">
       <Filter>manual</Filter>
     </ClInclude>
     <ClInclude Include="..\manual\cocos2d\lua_cocos2dx_deprecated.h">
@@ -499,6 +490,15 @@
     </ClInclude>
     <ClInclude Include="..\manual\cocostudio\lua-cocos-studio-conversions.h">
       <Filter>manual\cocostudio</Filter>
+    </ClInclude>
+    <ClInclude Include="..\manual\tolua\tolua_event.h">
+      <Filter>manual\tolua</Filter>
+    </ClInclude>
+    <ClInclude Include="..\manual\tolua\tolua_fix.h">
+      <Filter>manual\tolua</Filter>
+    </ClInclude>
+    <ClInclude Include="..\manual\tolua\tolua++.h">
+      <Filter>manual\tolua</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
