--- a/tests/cpp-tests/proj.wp8-xaml/cpp-testsComponent/cpp-testsComponent.vcxproj
+++ b/tests/cpp-tests/proj.wp8-xaml/cpp-testsComponent/cpp-testsComponent.vcxproj
@@ -339,6 +339,7 @@
     <ClCompile Include="..\..\Classes\PerformanceTest\PerformanceTextureTest.cpp" />
     <ClCompile Include="..\..\Classes\PerformanceTest\PerformanceTouchesTest.cpp" />
     <ClCompile Include="..\..\Classes\PerformanceTest\PerformanceCallbackTest.cpp" />
+    <ClCompile Include="..\..\Classes\VibrateTest\VibrateTest.cpp" />
     <ClCompile Include="..\..\Classes\ZwoptexTest\ZwoptexTest.cpp" />
     <ClCompile Include="..\..\Classes\TextInputTest\TextInputTest.cpp" />
     <ClCompile Include="..\..\Classes\UserDefaultTest\UserDefaultTest.cpp" />
@@ -542,6 +543,7 @@
     <ClInclude Include="..\..\Classes\PerformanceTest\PerformanceTextureTest.h" />
     <ClInclude Include="..\..\Classes\PerformanceTest\PerformanceTouchesTest.h" />
     <ClInclude Include="..\..\Classes\PerformanceTest\PerformanceCallbackTest.h" />
+    <ClInclude Include="..\..\Classes\VibrateTest\VibrateTest.h" />
     <ClInclude Include="..\..\Classes\ZwoptexTest\ZwoptexTest.h" />
     <ClInclude Include="..\..\Classes\TextInputTest\TextInputTest.h" />
     <ClInclude Include="..\..\Classes\UserDefaultTest\UserDefaultTest.h" />
